edit footer and cards

--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/2.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Sports</h5>
           </a>
           <p class="b-t-l">ERC-278</p>
@@ -1732,7 +1732,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/3.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Photography</h5>
           </a>
           <p class="b-t-l">ERC-745</p>
@@ -1747,7 +1747,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/4.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Tranding Cards</h5>
           </a>
           <p class="b-t-l">ERC-654</p>
@@ -1763,7 +1763,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/5.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Virtual World</h5>
           </a>
           <p class="b-t-l">ERC-453</p>
@@ -1778,7 +1778,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/6.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Collectibles</h5>
           </a>
           <p class="b-t-l">ERC-234</p>
@@ -1793,7 +1793,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/7.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">UX/UI</h5>
           </a>
           <p class="b-t-l">ERC-457</p>
@@ -1808,7 +1808,7 @@
             src="https://edeline.ru/nft-demo/assets/img/coll/8.jpg"
             alt="Card image cap"
           />
-          <a href="https://edeline.ru/nft-demo/item.html">
+          <a href="/item.html">
             <h5 class="card-title">Flowers</h5>
           </a>
           <p class="b-t-l">ERC-876</p>
@@ -1832,14 +1832,14 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <a href="https://edeline.ru/nft-demo/item.html">
+              <a href="/item.html">
                 <h5 class="card-title">Virtual Worlds</h5>
               </a>
               <p style="color: white">Owned by <a href="">@JohnDeo</a></p>
               <p class="b-t-l">2.3 BNB</p>
               <p class="b-t-r">1 of 1</p>
               <br /><br />
-              <a href="https://edeline.ru/nft-demo/login.html" class="button-vl"
+              <a href="/login.html" class="button-vl"
                 ><i
                   class="fas fa-shopping-bag"
                   style="font-size: 13px"
@@ -1857,14 +1857,14 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <a href="https://edeline.ru/nft-demo/item.html">
+              <a href="/item.html">
                 <h5 class="card-title">Collectibles</h5>
               </a>
               <p style="color: white">Owned by <a href="">@SarahConor</a></p>
               <p class="b-t-l">1.3 BNB</p>
               <p class="b-t-r">1 of 1</p>
               <br /><br />
-              <a href="https://edeline.ru/nft-demo/login.html" class="button-vl"
+              <a href="/login.html" class="button-vl"
                 ><i
                   class="fas fa-shopping-bag"
                   style="font-size: 13px"
@@ -1882,14 +1882,14 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <a href="https://edeline.ru/nft-demo/item.html">
+              <a href="/item.html">
                 <h5 class="card-title">Arts</h5>
               </a>
               <p style="color: white">Owned by <a href="">@GeorgiaMiller</a></p>
               <p class="b-t-l">1.7 BNB</p>
               <p class="b-t-r">1 of 1</p>
               <br /><br />
-              <a href="https://edeline.ru/nft-demo/login.html" class="button-vl"
+              <a href="/login.html" class="button-vl"
                 ><i
                   class="fas fa-shopping-bag"
                   style="font-size: 13px"
@@ -1907,14 +1907,14 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <a href="https://edeline.ru/nft-demo/item.html">
+              <a href="/item.html">
                 <h5 class="card-title">Industrial Revolution</h5>
               </a>
               <p style="color: white">Owned by <a href="">@JohnDoe</a></p>
               <p class="b-t-l">2.8 BNB</p>
               <p class="b-t-r">1 of 1</p>
               <br /><br />
-              <a href="https://edeline.ru/nft-demo/login.html" class="button-vl"
+              <a href="/login.html" class="button-vl"
                 ><i
                   class="fas fa-shopping-bag"
                   style="font-size: 13px"
@@ -2097,22 +2097,22 @@
               <div class="col">
                 <nav class="nav footer-nav nav-vertical my-4 my-md-0">
                   <a
-                    href="https://edeline.ru/nft-demo/author.html"
+                    href="/author.html"
                     class="nav-link"
                     >Profile</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/login.html"
+                    href="/login.html"
                     class="nav-link"
                     >Login</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/create.html"
+                    href="/create.html"
                     class="nav-link"
                     >Create</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/wallet.html"
+                    href="/wallet.html"
                     class="nav-link"
                     >Wallet</a
                   >
@@ -2121,22 +2121,22 @@
               <div class="col">
                 <nav class="nav footer-nav nav-vertical my-4 my-md-0">
                   <a
-                    href="https://edeline.ru/nft-demo/auctions.html"
+                    href="/auctions.html"
                     class="nav-link"
                     >Auctions</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/collections.html"
+                    href="/collections.html"
                     class="nav-link"
                     >Collections</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/contacts.html"
+                    href="/contacts.html"
                     class="nav-link"
                     >Contact</a
                   >
                   <a
-                    href="https://edeline.ru/nft-demo/item.html"
+                    href="/item.html"
                     class="nav-link"
                     >Items</a
                   >
