update and add css files

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://edeline.ru/nft-demo/js/bootstrap.min.js"></script>
     <!-- Estilos -->
-    <style>
+      <!-- Estilos -->
+      <link rel="stylesheet" href="estilos.css">
+      <link rel="stylesheet" href="estilo.css">
+    <!-- <style>
       /*! CSS Used from: https://edeline.ru/nft-demo/css/style.css ; media=all */
       @media all {
         :root {
@@ -1227,7 +1230,7 @@
           url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.svg#fontawesome)
             format("svg");
       }
-    </style>
+    </style> -->
 
     <title>KTX-NFT Marketplace</title>
     <!-- FAVICON -->
